# forge

./: CMakeLists.txt  README.md
assets/shaders/: alloy_forge.frag  fullscreen.vert
src/: main.cpp
src/core/: Application.cpp  Application.h  Engine.cpp  Engine.h
